Move to modular gradle build and serviceloader architecture (#59)